CSS jockeying to ensure that there's a solid background color behind the card views until the card background image loads, but done in a way that preserves the transparent shadow that's baked into the card background image. Funz!
git-svn-id: svn+ssh://src.earth.threerings.net/everything/trunk@582 a9e240f3-4568-de11-90a4-003048321218

--- a/src/web/game.css
+++ b/src/web/game.css
@@ -32,11 +32,9 @@
 
 /** CardView styles */
 .cardView {
-  background: url(images/info_card.png) no-repeat;
-  width: 611px;
-  height: 451px;
+  width: 603px;
+  height: 443px;
   font-size: 15px;
-  padding: 2px 5px 6px 3px;
 }
 
 .cardViewTall {
